--- a/base/templates/events.html
+++ b/base/templates/events.html
@@ -13,7 +13,7 @@
                   <div class="swiper-slide">
                       <div class="row event-item">
                         <div class="col-lg-6">
-                          <img src="media/{{ event.img }}" class="img-fluid" alt="">
+                          <img src="{{ event.img.url }}" class="img-fluid" alt="">
                         </div>
                         <div class="col-lg-6 pt-4 pt-lg-0 content">
                           <h3>{{ event.name }}</h3>
