--- a/base/templates/about.html
+++ b/base/templates/about.html
@@ -5,7 +5,7 @@
         <div class="row">
             {% for i in about %}
 
-                <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/about.jpg");'>
+                <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("{{ i.img.url }}");'>
                     <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
                 </div>
 
