--- a/base/templates/main_menu.html
+++ b/base/templates/main_menu.html
@@ -9,8 +9,9 @@
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
+                <li data-filter="*" class="filter-active">Show All</li>
                 {% for category in categories %}
-                    <li data-filter=".filter-{{ category.name }}">{{ category.name }}</li>
+                    <li data-filter=".filter-cat{{ category.pk }}">{{ category.name }}</li>
                 {% endfor %}
 
 {#              <li data-filter="*" class="filter-active">Show All</li>#}
@@ -20,7 +21,7 @@
 
         <div class="row menu-container">
             {% for dish in dishes %}
-                <div class="col-lg-6 menu-item filter-{{ dish.category.name }}">
+                <div class="col-lg-6 menu-item filter-cat{{ dish.category.pk }}">
             <div class="menu-content">
               <a href="#">{{ dish.name }}</a><span>${{ dish.price }}</span>
             </div>
