--- a/base/templates/special.html
+++ b/base/templates/special.html
@@ -1,7 +1,6 @@
 <!-- ======= Specials Section ======= -->
 <section id="specials" class="specials">
-      <div class="container">
-
+    <div class="container">
         <div class="section-title">
           <h2>Check our <span>Specials</span></h2>
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
@@ -10,37 +9,51 @@
         <div class="row">
           <div class="col-lg-3">
             <ul class="nav nav-tabs flex-column">
-
-                {% for spec in specials %}
-                    <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="tab" href="#">{{ spec.name }}</a>
-                    </li>
+                {% for dish in specials %}
+                    {% if forloop.first %}
+                        <li class="nav-item">
+                            <a class="nav-link active show" data-bs-toggle="tab" href="#tab-{{ dish.pk }}">{{ dish.name }}</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" data-bs-toggle="tab" href="#tab-{{ dish.pk }}">{{ dish.name }}</a>
+                        </li>
+                    {% endif %}
                 {% endfor %}
-
             </ul>
           </div>
           <div class="col-lg-9 mt-4 mt-lg-0">
             <div class="tab-content">
-
-                {% for spec in specials %}
-                    <div class="tab-pane" id={{ spec.name }}>
-                        <div class="row">
-                            <div class="col-lg-8 details order-2 order-lg-1">
-                                <h3>{{ spec.name }}</h3>
-                                <p>{{ spec.description }}</p>
+                {% for dish in specials %}
+                    {% if forloop.first %}
+                        <div class="tab-pane active show" id="tab-{{ dish.pk }}">
+                            <div class="row">
+                              <div class="col-lg-8 details order-2 order-lg-1">
+                                <h3>{{ dish.name }}</h3>
+                                <p class="fst-italic">{{ dish.description }}</p>
+                              </div>
+                              <div class="col-lg-4 text-center order-1 order-lg-2">
+                                <img src="{{ dish.photo.url }}" alt="" class="img-fluid">
+                              </div>
                             </div>
-                            <div class="col-lg-4 text-center order-1 order-lg-2">
-                                <img src="dishes/{{ spec.photo }}" alt="" class="img-fluid">
+                          </div>
+                    {% else %}
+                        <div class="tab-pane" id="tab-{{ dish.pk }}">
+                            <div class="row">
+                              <div class="col-lg-8 details order-2 order-lg-1">
+                                <h3>{{ dish.name }}</h3>
+                                <p class="fst-italic">{{ dish.description }}</p>
+                              </div>
+                              <div class="col-lg-4 text-center order-1 order-lg-2">
+                                <img src="{{ dish.photo.url }}" alt="" class="img-fluid">
+                              </div>
                             </div>
-                        </div>
-                    </div>
+                          </div>
+                    {% endif %}
                 {% endfor %}
-
-
             </div>
           </div>
         </div>
 
       </div>
     </section>
-<!-- End Specials Section -->
