--- a/manager/templates/reservations_list.html
+++ b/manager/templates/reservations_list.html
@@ -1,25 +1,27 @@
 {% extends 'index.html' %}
 
 {% block content %}
-    <section id="reserve">
-        <div class="col-md-10 col-md-offset-1">
-            {% for item in lst %}
-                <div class="row">
-                    <div class="col-md-3">
-                        <a href="{% url 'manager:update reserve' pk=item.pk %}">
-                            <buttom type = 'buttom' class ='btn btn-primary'>Close order</buttom>
-                        </a>
+    <section id="reserves">
+        <div class="container">
+            <div class="col-md-10 col-md-offset-1">
+                {% for item in lst %}
+                    <div class="row">
+                        <div class="col-md-3">
+
+                            <a href="{% url 'manager:update_reserve' pk=item.pk %}">
+                                <button type="button" class="btn btn-primary">Закрыть заявку</button>
+                            </a>
+                        </div>
+                        <div class="col-md-3">{{ item.name }}</div>
+                        <div class="col-md-3">{{ item.phone }}</div>
+                        <div class="col-md-3">{{ item.date|date:'d-m-Y' }}</div>
                     </div>
-                    <div class="col-md-3">{{ item.name }}</div>
-                    <div class="col-md-3">{{ item.phone }}</div>
-                    <div class="col-md-3">{{ item.date|date : 'd-m-Y' }}</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3"></div>
-                    <div class="col-md-3"><p>{{ item.message}}</p></div>
-                </div>
-            {% endfor %}
+                    <div class="row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-9"><p>{{ item.message }}</p></div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
     </section>
-
 {% endblock %}
