--- a/base/templates/reservation.html
+++ b/base/templates/reservation.html
@@ -9,6 +9,7 @@
 
         <form action="" method="post" role="form">
             {% csrf_token %}
+            {{ reservation_form.as_p }}
             <div class="row">
             <div class="col-lg-4 col-md-6 form-group">
               {{ reservation_form.name }}
